[gd_scene load_steps=5 format=3 uid="uid://cugdj5hfbsory"]

[ext_resource type="Script" uid="uid://yfuapm1bva43" path="res://code/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://f6ubbb0x75gt" path="res://sprites/greyFace.png" id="2_qhqgy"]
[ext_resource type="Texture2D" uid="uid://bq8nup6fpaet4" path="res://sprites/greywhiteclothe.png" id="2_tuyoq"]
[ext_resource type="Texture2D" uid="uid://jonju6lt60kh" path="res://sprites/adultSticks.png" id="3_qlg0r"]

[node name="player" type="Node2D"]
script = ExtResource("1_g2els")
size = 4
body = ExtResource("2_tuyoq")
stick = ExtResource("3_qlg0r")

[node name="body" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)

[node name="face" type="Sprite2D" parent="."]
position = Vector2(-1, 0)
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_qhqgy")

[node name="leftArm" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)

[node name="rightArm" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
offset = Vector2(0, 135)

[node name="leftLeg" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
offset = Vector2(0, 132.5)

[node name="rightLeg" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
offset = Vector2(0, 132.5)
